--- a/raon-control/monitoring.html
+++ b/raon-control/monitoring.html
@@ -867,17 +867,17 @@
 
         // Set Real Data
         // real_storage();
-        real_fps();
+        // real_fps();
         // real_timestamp();
-        real_timing();
+        // real_timing();
         // real_network();
         // real_server();
 
         // Set Simulation Data
         simulation_storage();
-        // simulation_fps();
+        simulation_fps();
         simulation_timestamp();
-        // simulation_timing();
+        simulation_timing();
         simulation_network();
         simulation_server();
     }
